--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
     "@types/properties-reader": "^2.1.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0"
