--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -95,6 +96,7 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16",
+    "@types/lodash": "^4.14.194",
     "@types/properties-reader": "^2.1.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0"
