--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,10 +21,21 @@
 		"jsx": "react-jsx",
 		"baseUrl": ".",
 		"paths": {
-			"@less/*": ["src/less/*"],
-			"@enum": ["src/common/enum.tsx"],
-            "@font": ["src/assets/font/font.tsx"],
-			"@api": ["src/api.tsx"]
+			"@less/*": [
+				"src/less/*"
+			],
+			"@enum": [
+				"src/common/enum.tsx"
+			],
+			"@font": [
+				"src/assets/font/font.tsx"
+			],
+			"@api": [
+				"src/api.tsx"
+			],
+			"@service": [
+				"src/common/service.tsx"
+			],
 		},
 	},
 	"include": [
